<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="@dimen/dp_12"
    android:paddingEnd="@dimen/dp_12">

    <ImageView
        android:id="@+id/checkboxIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:contentDescription="@string/content_description_checkbox_pic"
        android:src="@drawable/selector_block_checkbox" />

    <com.anytypeio.anytype.core_ui.widgets.text.TextInputWidget
        android:layout_marginStart="4dp"
        android:id="@+id/checkboxContent"
        style="@style/BlockCheckboxContentStyle"
        tools:text="New front-end based on design" />

</LinearLayout>