<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="@dimen/dp_12"
    android:paddingEnd="@dimen/dp_12">

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minWidth="@dimen/default_block_type_width"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:visibility="visible"
        tools:text="19." />

    <com.anytypeio.anytype.core_ui.widgets.text.TextInputWidget
        android:id="@+id/numberedListContent"
        style="@style/BlockNumberedContentStyle"
        android:layout_marginStart="4dp"
        android:hint="@string/hint_numbered_list"
        tools:text="@string/default_text_placeholder" />

</LinearLayout>